--- a/css/bulma.css
+++ b/css/bulma.css
@@ -9644,234 +9644,234 @@ label.panel-block:hover {
   container-name: bulma-fixed-grid;
   container-type: inline-size;
 }
-.fixed-grid .grid {
+.fixed-grid > .grid {
   --bulma-grid-gap-count: calc(var(--bulma-grid-column-count) - 1);
   --bulma-grid-column-count: 2;
   grid-template-columns: repeat(var(--bulma-grid-column-count), 1fr);
 }
-.fixed-grid.has-1-cols .grid {
+.fixed-grid.has-1-cols > .grid {
   --bulma-grid-column-count: 1;
 }
-.fixed-grid.has-2-cols .grid {
+.fixed-grid.has-2-cols > .grid {
   --bulma-grid-column-count: 2;
 }
-.fixed-grid.has-3-cols .grid {
+.fixed-grid.has-3-cols > .grid {
   --bulma-grid-column-count: 3;
 }
-.fixed-grid.has-4-cols .grid {
+.fixed-grid.has-4-cols > .grid {
   --bulma-grid-column-count: 4;
 }
-.fixed-grid.has-5-cols .grid {
+.fixed-grid.has-5-cols > .grid {
   --bulma-grid-column-count: 5;
 }
-.fixed-grid.has-6-cols .grid {
+.fixed-grid.has-6-cols > .grid {
   --bulma-grid-column-count: 6;
 }
-.fixed-grid.has-7-cols .grid {
+.fixed-grid.has-7-cols > .grid {
   --bulma-grid-column-count: 7;
 }
-.fixed-grid.has-8-cols .grid {
+.fixed-grid.has-8-cols > .grid {
   --bulma-grid-column-count: 8;
 }
-.fixed-grid.has-9-cols .grid {
+.fixed-grid.has-9-cols > .grid {
   --bulma-grid-column-count: 9;
 }
-.fixed-grid.has-10-cols .grid {
+.fixed-grid.has-10-cols > .grid {
   --bulma-grid-column-count: 10;
 }
-.fixed-grid.has-11-cols .grid {
+.fixed-grid.has-11-cols > .grid {
   --bulma-grid-column-count: 11;
 }
-.fixed-grid.has-12-cols .grid {
+.fixed-grid.has-12-cols > .grid {
   --bulma-grid-column-count: 12;
 }
 @container bulma-fixed-grid (max-width: 768px) {
-  .fixed-grid.has-1-cols-mobile .grid {
+  .fixed-grid.has-1-cols-mobile > .grid {
     --bulma-grid-column-count: 1;
   }
-  .fixed-grid.has-2-cols-mobile .grid {
+  .fixed-grid.has-2-cols-mobile > .grid {
     --bulma-grid-column-count: 2;
   }
-  .fixed-grid.has-3-cols-mobile .grid {
+  .fixed-grid.has-3-cols-mobile > .grid {
     --bulma-grid-column-count: 3;
   }
-  .fixed-grid.has-4-cols-mobile .grid {
+  .fixed-grid.has-4-cols-mobile > .grid {
     --bulma-grid-column-count: 4;
   }
-  .fixed-grid.has-5-cols-mobile .grid {
+  .fixed-grid.has-5-cols-mobile > .grid {
     --bulma-grid-column-count: 5;
   }
-  .fixed-grid.has-6-cols-mobile .grid {
+  .fixed-grid.has-6-cols-mobile > .grid {
     --bulma-grid-column-count: 6;
   }
-  .fixed-grid.has-7-cols-mobile .grid {
+  .fixed-grid.has-7-cols-mobile > .grid {
     --bulma-grid-column-count: 7;
   }
-  .fixed-grid.has-8-cols-mobile .grid {
+  .fixed-grid.has-8-cols-mobile > .grid {
     --bulma-grid-column-count: 8;
   }
-  .fixed-grid.has-9-cols-mobile .grid {
+  .fixed-grid.has-9-cols-mobile > .grid {
     --bulma-grid-column-count: 9;
   }
-  .fixed-grid.has-10-cols-mobile .grid {
+  .fixed-grid.has-10-cols-mobile > .grid {
     --bulma-grid-column-count: 10;
   }
-  .fixed-grid.has-11-cols-mobile .grid {
+  .fixed-grid.has-11-cols-mobile > .grid {
     --bulma-grid-column-count: 11;
   }
-  .fixed-grid.has-12-cols-mobile .grid {
+  .fixed-grid.has-12-cols-mobile > .grid {
     --bulma-grid-column-count: 12;
   }
 }
 @container bulma-fixed-grid (min-width: 769px) {
-  .fixed-grid.has-1-cols-tablet .grid {
+  .fixed-grid.has-1-cols-tablet > .grid {
     --bulma-grid-column-count: 1;
   }
-  .fixed-grid.has-2-cols-tablet .grid {
+  .fixed-grid.has-2-cols-tablet > .grid {
     --bulma-grid-column-count: 2;
   }
-  .fixed-grid.has-3-cols-tablet .grid {
+  .fixed-grid.has-3-cols-tablet > .grid {
     --bulma-grid-column-count: 3;
   }
-  .fixed-grid.has-4-cols-tablet .grid {
+  .fixed-grid.has-4-cols-tablet > .grid {
     --bulma-grid-column-count: 4;
   }
-  .fixed-grid.has-5-cols-tablet .grid {
+  .fixed-grid.has-5-cols-tablet > .grid {
     --bulma-grid-column-count: 5;
   }
-  .fixed-grid.has-6-cols-tablet .grid {
+  .fixed-grid.has-6-cols-tablet > .grid {
     --bulma-grid-column-count: 6;
   }
-  .fixed-grid.has-7-cols-tablet .grid {
+  .fixed-grid.has-7-cols-tablet > .grid {
     --bulma-grid-column-count: 7;
   }
-  .fixed-grid.has-8-cols-tablet .grid {
+  .fixed-grid.has-8-cols-tablet > .grid {
     --bulma-grid-column-count: 8;
   }
-  .fixed-grid.has-9-cols-tablet .grid {
+  .fixed-grid.has-9-cols-tablet > .grid {
     --bulma-grid-column-count: 9;
   }
-  .fixed-grid.has-10-cols-tablet .grid {
+  .fixed-grid.has-10-cols-tablet > .grid {
     --bulma-grid-column-count: 10;
   }
-  .fixed-grid.has-11-cols-tablet .grid {
+  .fixed-grid.has-11-cols-tablet > .grid {
     --bulma-grid-column-count: 11;
   }
-  .fixed-grid.has-12-cols-tablet .grid {
+  .fixed-grid.has-12-cols-tablet > .grid {
     --bulma-grid-column-count: 12;
   }
 }
 @container bulma-fixed-grid (min-width: 1024px) {
-  .fixed-grid.has-1-cols-desktop .grid {
+  .fixed-grid.has-1-cols-desktop > .grid {
     --bulma-grid-column-count: 1;
   }
-  .fixed-grid.has-2-cols-desktop .grid {
+  .fixed-grid.has-2-cols-desktop > .grid {
     --bulma-grid-column-count: 2;
   }
-  .fixed-grid.has-3-cols-desktop .grid {
+  .fixed-grid.has-3-cols-desktop > .grid {
     --bulma-grid-column-count: 3;
   }
-  .fixed-grid.has-4-cols-desktop .grid {
+  .fixed-grid.has-4-cols-desktop > .grid {
     --bulma-grid-column-count: 4;
   }
-  .fixed-grid.has-5-cols-desktop .grid {
+  .fixed-grid.has-5-cols-desktop > .grid {
     --bulma-grid-column-count: 5;
   }
-  .fixed-grid.has-6-cols-desktop .grid {
+  .fixed-grid.has-6-cols-desktop > .grid {
     --bulma-grid-column-count: 6;
   }
-  .fixed-grid.has-7-cols-desktop .grid {
+  .fixed-grid.has-7-cols-desktop > .grid {
     --bulma-grid-column-count: 7;
   }
-  .fixed-grid.has-8-cols-desktop .grid {
+  .fixed-grid.has-8-cols-desktop > .grid {
     --bulma-grid-column-count: 8;
   }
-  .fixed-grid.has-9-cols-desktop .grid {
+  .fixed-grid.has-9-cols-desktop > .grid {
     --bulma-grid-column-count: 9;
   }
-  .fixed-grid.has-10-cols-desktop .grid {
+  .fixed-grid.has-10-cols-desktop > .grid {
     --bulma-grid-column-count: 10;
   }
-  .fixed-grid.has-11-cols-desktop .grid {
+  .fixed-grid.has-11-cols-desktop > .grid {
     --bulma-grid-column-count: 11;
   }
-  .fixed-grid.has-12-cols-desktop .grid {
+  .fixed-grid.has-12-cols-desktop > .grid {
     --bulma-grid-column-count: 12;
   }
 }
 @container bulma-fixed-grid (min-width: 1216px) {
-  .fixed-grid.has-1-cols-widescreen .grid {
+  .fixed-grid.has-1-cols-widescreen > .grid {
     --bulma-grid-column-count: 1;
   }
-  .fixed-grid.has-2-cols-widescreen .grid {
+  .fixed-grid.has-2-cols-widescreen > .grid {
     --bulma-grid-column-count: 2;
   }
-  .fixed-grid.has-3-cols-widescreen .grid {
+  .fixed-grid.has-3-cols-widescreen > .grid {
     --bulma-grid-column-count: 3;
   }
-  .fixed-grid.has-4-cols-widescreen .grid {
+  .fixed-grid.has-4-cols-widescreen > .grid {
     --bulma-grid-column-count: 4;
   }
-  .fixed-grid.has-5-cols-widescreen .grid {
+  .fixed-grid.has-5-cols-widescreen > .grid {
     --bulma-grid-column-count: 5;
   }
-  .fixed-grid.has-6-cols-widescreen .grid {
+  .fixed-grid.has-6-cols-widescreen > .grid {
     --bulma-grid-column-count: 6;
   }
-  .fixed-grid.has-7-cols-widescreen .grid {
+  .fixed-grid.has-7-cols-widescreen > .grid {
     --bulma-grid-column-count: 7;
   }
-  .fixed-grid.has-8-cols-widescreen .grid {
+  .fixed-grid.has-8-cols-widescreen > .grid {
     --bulma-grid-column-count: 8;
   }
-  .fixed-grid.has-9-cols-widescreen .grid {
+  .fixed-grid.has-9-cols-widescreen > .grid {
     --bulma-grid-column-count: 9;
   }
-  .fixed-grid.has-10-cols-widescreen .grid {
+  .fixed-grid.has-10-cols-widescreen > .grid {
     --bulma-grid-column-count: 10;
   }
-  .fixed-grid.has-11-cols-widescreen .grid {
+  .fixed-grid.has-11-cols-widescreen > .grid {
     --bulma-grid-column-count: 11;
   }
-  .fixed-grid.has-12-cols-widescreen .grid {
+  .fixed-grid.has-12-cols-widescreen > .grid {
     --bulma-grid-column-count: 12;
   }
 }
 @container bulma-fixed-grid (min-width: 1408px) {
-  .fixed-grid.has-1-cols-fullhd .grid {
+  .fixed-grid.has-1-cols-fullhd > .grid {
     --bulma-grid-column-count: 1;
   }
-  .fixed-grid.has-2-cols-fullhd .grid {
+  .fixed-grid.has-2-cols-fullhd > .grid {
     --bulma-grid-column-count: 2;
   }
-  .fixed-grid.has-3-cols-fullhd .grid {
+  .fixed-grid.has-3-cols-fullhd > .grid {
     --bulma-grid-column-count: 3;
   }
-  .fixed-grid.has-4-cols-fullhd .grid {
+  .fixed-grid.has-4-cols-fullhd > .grid {
     --bulma-grid-column-count: 4;
   }
-  .fixed-grid.has-5-cols-fullhd .grid {
+  .fixed-grid.has-5-cols-fullhd > .grid {
     --bulma-grid-column-count: 5;
   }
-  .fixed-grid.has-6-cols-fullhd .grid {
+  .fixed-grid.has-6-cols-fullhd > .grid {
     --bulma-grid-column-count: 6;
   }
-  .fixed-grid.has-7-cols-fullhd .grid {
+  .fixed-grid.has-7-cols-fullhd > .grid {
     --bulma-grid-column-count: 7;
   }
-  .fixed-grid.has-8-cols-fullhd .grid {
+  .fixed-grid.has-8-cols-fullhd > .grid {
     --bulma-grid-column-count: 8;
   }
-  .fixed-grid.has-9-cols-fullhd .grid {
+  .fixed-grid.has-9-cols-fullhd > .grid {
     --bulma-grid-column-count: 9;
   }
-  .fixed-grid.has-10-cols-fullhd .grid {
+  .fixed-grid.has-10-cols-fullhd > .grid {
     --bulma-grid-column-count: 10;
   }
-  .fixed-grid.has-11-cols-fullhd .grid {
+  .fixed-grid.has-11-cols-fullhd > .grid {
     --bulma-grid-column-count: 11;
   }
-  .fixed-grid.has-12-cols-fullhd .grid {
+  .fixed-grid.has-12-cols-fullhd > .grid {
     --bulma-grid-column-count: 12;
   }
 }
