feat: update input[type=color] css

--- a/docs/assets/css/custom.css
+++ b/docs/assets/css/custom.css
@@ -175,7 +175,7 @@ fieldset[disabled] .file-name, fieldset[disabled] .select select, .select fields
 .control,
 .input,
 .textarea,
-.select select {
+.select {
   --bulma-input-h: var(--bulma-scheme-h);
   --bulma-input-s: var(--bulma-scheme-s);
   --bulma-input-l: var(--bulma-scheme-main-l);
@@ -1182,6 +1182,7 @@ fieldset[disabled] .file-name, fieldset[disabled] .select select, .select fields
   font-size: var(--bulma-size-large);
 }
 
+/* Bulma Form */
 /* Bulma Base */
 /*! minireset.css v0.0.6 | MIT License | github.com/jgthms/minireset.css */
 html,
