--- a/docs/assets/css/website.css
+++ b/docs/assets/css/website.css
@@ -9341,6 +9341,29 @@ button.tag:active,
 .select select[disabled]:-ms-input-placeholder, [disabled].input:-ms-input-placeholder, [disabled].textarea:-ms-input-placeholder, fieldset[disabled] .select select:-ms-input-placeholder, .select fieldset[disabled] select:-ms-input-placeholder, fieldset[disabled] .input:-ms-input-placeholder, fieldset[disabled] .textarea:-ms-input-placeholder {
   color: var(--bulma-input-disabled-placeholder-color);
 }
+.select select[type=color], [type=color].input, [type=color].textarea {
+  -webkit-appearance: none !important;
+  -moz-appearance: none !important;
+  appearance: none !important;
+  background: none !important;
+}
+.select select[type=color], [type=color].input, [type=color].textarea {
+  width: var(--bulma-control-height);
+  min-width: var(--bulma-control-height);
+  max-width: var(--bulma-control-height);
+  margin: 0 !important;
+  padding: 0 !important;
+  overflow: hidden;
+}
+.select select[type=color]::-webkit-color-swatch-wrapper, [type=color].input::-webkit-color-swatch-wrapper, [type=color].textarea::-webkit-color-swatch-wrapper {
+  margin: 0 !important;
+  padding: 0 !important;
+}
+.select select[type=color]::-webkit-color-swatch, [type=color].input::-webkit-color-swatch, [type=color].textarea::-webkit-color-swatch {
+  margin: 0 !important;
+  padding: 0 !important;
+  border: none;
+}
 
 /* Bulma Form */
 .textarea, .input {
