fix github link

--- a/docs/_includes/home/features.html
+++ b/docs/_includes/home/features.html
@@ -23,7 +23,7 @@
       subtitle="Download. Customize. Done."
       href=href
     %}
-    {% assign href = site.meta.github %}
+    {% assign href = site.data.meta.github %}
     {{ href }}
     {% include website/feature.html
       id="free"
