Fix select arrow color

--- a/css/versions/bulma-no-dark-mode.css
+++ b/css/versions/bulma-no-dark-mode.css
@@ -305,7 +305,7 @@ table th {
 }
 /* Bulma Elements */
 .navbar-link:not(.is-arrowless)::after, .select:not(.is-multiple):not(.is-loading)::after {
-  border: 0.125em solid var(--bulma-link);
+  border: 0.125em solid var(--bulma-arrow-color);
   border-right: 0;
   border-top: 0;
   content: " ";
@@ -2944,6 +2944,7 @@ button.tag:active,
   --bulma-input-focus-s: var(--bulma-white-s);
   --bulma-input-focus-l: var(--bulma-white-l);
   --bulma-input-border-l: var(--bulma-white-l);
+  --bulma-arrow-color: var(--bulma-white);
 }
 .select.is-black {
   --bulma-input-h: var(--bulma-black-h);
@@ -2953,6 +2954,7 @@ button.tag:active,
   --bulma-input-focus-s: var(--bulma-black-s);
   --bulma-input-focus-l: var(--bulma-black-l);
   --bulma-input-border-l: var(--bulma-black-l);
+  --bulma-arrow-color: var(--bulma-black);
 }
 .select.is-light {
   --bulma-input-h: var(--bulma-light-h);
@@ -2962,6 +2964,7 @@ button.tag:active,
   --bulma-input-focus-s: var(--bulma-light-s);
   --bulma-input-focus-l: var(--bulma-light-l);
   --bulma-input-border-l: var(--bulma-light-l);
+  --bulma-arrow-color: var(--bulma-light);
 }
 .select.is-dark {
   --bulma-input-h: var(--bulma-dark-h);
@@ -2971,6 +2974,7 @@ button.tag:active,
   --bulma-input-focus-s: var(--bulma-dark-s);
   --bulma-input-focus-l: var(--bulma-dark-l);
   --bulma-input-border-l: var(--bulma-dark-l);
+  --bulma-arrow-color: var(--bulma-dark);
 }
 .select.is-text {
   --bulma-input-h: var(--bulma-text-h);
@@ -2980,6 +2984,7 @@ button.tag:active,
   --bulma-input-focus-s: var(--bulma-text-s);
   --bulma-input-focus-l: var(--bulma-text-l);
   --bulma-input-border-l: var(--bulma-text-l);
+  --bulma-arrow-color: var(--bulma-text);
 }
 .select.is-primary {
   --bulma-input-h: var(--bulma-primary-h);
@@ -2989,6 +2994,7 @@ button.tag:active,
   --bulma-input-focus-s: var(--bulma-primary-s);
   --bulma-input-focus-l: var(--bulma-primary-l);
   --bulma-input-border-l: var(--bulma-primary-l);
+  --bulma-arrow-color: var(--bulma-primary);
 }
 .select.is-link {
   --bulma-input-h: var(--bulma-link-h);
@@ -2998,6 +3004,7 @@ button.tag:active,
   --bulma-input-focus-s: var(--bulma-link-s);
   --bulma-input-focus-l: var(--bulma-link-l);
   --bulma-input-border-l: var(--bulma-link-l);
+  --bulma-arrow-color: var(--bulma-link);
 }
 .select.is-info {
   --bulma-input-h: var(--bulma-info-h);
@@ -3007,6 +3014,7 @@ button.tag:active,
   --bulma-input-focus-s: var(--bulma-info-s);
   --bulma-input-focus-l: var(--bulma-info-l);
   --bulma-input-border-l: var(--bulma-info-l);
+  --bulma-arrow-color: var(--bulma-info);
 }
 .select.is-success {
   --bulma-input-h: var(--bulma-success-h);
@@ -3016,6 +3024,7 @@ button.tag:active,
   --bulma-input-focus-s: var(--bulma-success-s);
   --bulma-input-focus-l: var(--bulma-success-l);
   --bulma-input-border-l: var(--bulma-success-l);
+  --bulma-arrow-color: var(--bulma-success);
 }
 .select.is-warning {
   --bulma-input-h: var(--bulma-warning-h);
@@ -3025,6 +3034,7 @@ button.tag:active,
   --bulma-input-focus-s: var(--bulma-warning-s);
   --bulma-input-focus-l: var(--bulma-warning-l);
   --bulma-input-border-l: var(--bulma-warning-l);
+  --bulma-arrow-color: var(--bulma-warning);
 }
 .select.is-danger {
   --bulma-input-h: var(--bulma-danger-h);
@@ -3034,6 +3044,7 @@ button.tag:active,
   --bulma-input-focus-s: var(--bulma-danger-s);
   --bulma-input-focus-l: var(--bulma-danger-l);
   --bulma-input-border-l: var(--bulma-danger-l);
+  --bulma-arrow-color: var(--bulma-danger);
 }
 .select.is-small {
   border-radius: var(--bulma-radius-small);
@@ -19683,6 +19694,7 @@ has-background-danger.is-hoverable:active {
   --bulma-radius-large: 0.75rem;
   --bulma-radius-rounded: 9999px;
   --bulma-speed: 86ms;
+  --bulma-arrow-color: var(--bulma-link);
   --bulma-loading-color: var(--bulma-border);
   --bulma-burger-h: var(--bulma-link-h);
   --bulma-burger-s: var(--bulma-link-s);
