--- a/docs/assets/css/website.css
+++ b/docs/assets/css/website.css
@@ -68,6 +68,7 @@
   --bulma-radius-large: 0.75rem;
   --bulma-radius-rounded: 9999px;
   --bulma-speed: 86ms;
+  --bulma-arrow-color: var(--bulma-link);
   --bulma-loading-color: var(--bulma-border);
   --bulma-burger-h: var(--bulma-link-h);
   --bulma-burger-s: var(--bulma-link-s);
@@ -1988,6 +1989,7 @@
     --bulma-radius-large: 0.75rem;
     --bulma-radius-rounded: 9999px;
     --bulma-speed: 86ms;
+    --bulma-arrow-color: var(--bulma-link);
     --bulma-loading-color: var(--bulma-border);
     --bulma-burger-h: var(--bulma-link-h);
     --bulma-burger-s: var(--bulma-link-s);
@@ -3945,6 +3947,7 @@
   --bulma-radius-large: 0.75rem;
   --bulma-radius-rounded: 9999px;
   --bulma-speed: 86ms;
+  --bulma-arrow-color: var(--bulma-link);
   --bulma-loading-color: var(--bulma-border);
   --bulma-burger-h: var(--bulma-link-h);
   --bulma-burger-s: var(--bulma-link-s);
@@ -6204,7 +6207,7 @@ table th {
 }
 /* Bulma Elements */
 .navbar-link:not(.is-arrowless)::after, .select:not(.is-multiple):not(.is-loading)::after {
-  border: 0.125em solid var(--bulma-link);
+  border: 0.125em solid var(--bulma-arrow-color);
   border-right: 0;
   border-top: 0;
   content: " ";
@@ -9673,6 +9676,7 @@ button.tag:active,
   --bulma-input-focus-s: var(--bulma-white-s);
   --bulma-input-focus-l: var(--bulma-white-l);
   --bulma-input-border-l: var(--bulma-white-l);
+  --bulma-arrow-color: var(--bulma-white);
 }
 .select.is-black {
   --bulma-input-h: var(--bulma-black-h);
@@ -9682,6 +9686,7 @@ button.tag:active,
   --bulma-input-focus-s: var(--bulma-black-s);
   --bulma-input-focus-l: var(--bulma-black-l);
   --bulma-input-border-l: var(--bulma-black-l);
+  --bulma-arrow-color: var(--bulma-black);
 }
 .select.is-light {
   --bulma-input-h: var(--bulma-light-h);
@@ -9691,6 +9696,7 @@ button.tag:active,
   --bulma-input-focus-s: var(--bulma-light-s);
   --bulma-input-focus-l: var(--bulma-light-l);
   --bulma-input-border-l: var(--bulma-light-l);
+  --bulma-arrow-color: var(--bulma-light);
 }
 .select.is-dark {
   --bulma-input-h: var(--bulma-dark-h);
@@ -9700,6 +9706,7 @@ button.tag:active,
   --bulma-input-focus-s: var(--bulma-dark-s);
   --bulma-input-focus-l: var(--bulma-dark-l);
   --bulma-input-border-l: var(--bulma-dark-l);
+  --bulma-arrow-color: var(--bulma-dark);
 }
 .select.is-text {
   --bulma-input-h: var(--bulma-text-h);
@@ -9709,6 +9716,7 @@ button.tag:active,
   --bulma-input-focus-s: var(--bulma-text-s);
   --bulma-input-focus-l: var(--bulma-text-l);
   --bulma-input-border-l: var(--bulma-text-l);
+  --bulma-arrow-color: var(--bulma-text);
 }
 .select.is-primary {
   --bulma-input-h: var(--bulma-primary-h);
@@ -9718,6 +9726,7 @@ button.tag:active,
   --bulma-input-focus-s: var(--bulma-primary-s);
   --bulma-input-focus-l: var(--bulma-primary-l);
   --bulma-input-border-l: var(--bulma-primary-l);
+  --bulma-arrow-color: var(--bulma-primary);
 }
 .select.is-link {
   --bulma-input-h: var(--bulma-link-h);
@@ -9727,6 +9736,7 @@ button.tag:active,
   --bulma-input-focus-s: var(--bulma-link-s);
   --bulma-input-focus-l: var(--bulma-link-l);
   --bulma-input-border-l: var(--bulma-link-l);
+  --bulma-arrow-color: var(--bulma-link);
 }
 .select.is-info {
   --bulma-input-h: var(--bulma-info-h);
@@ -9736,6 +9746,7 @@ button.tag:active,
   --bulma-input-focus-s: var(--bulma-info-s);
   --bulma-input-focus-l: var(--bulma-info-l);
   --bulma-input-border-l: var(--bulma-info-l);
+  --bulma-arrow-color: var(--bulma-info);
 }
 .select.is-success {
   --bulma-input-h: var(--bulma-success-h);
@@ -9745,6 +9756,7 @@ button.tag:active,
   --bulma-input-focus-s: var(--bulma-success-s);
   --bulma-input-focus-l: var(--bulma-success-l);
   --bulma-input-border-l: var(--bulma-success-l);
+  --bulma-arrow-color: var(--bulma-success);
 }
 .select.is-warning {
   --bulma-input-h: var(--bulma-warning-h);
@@ -9754,6 +9766,7 @@ button.tag:active,
   --bulma-input-focus-s: var(--bulma-warning-s);
   --bulma-input-focus-l: var(--bulma-warning-l);
   --bulma-input-border-l: var(--bulma-warning-l);
+  --bulma-arrow-color: var(--bulma-warning);
 }
 .select.is-danger {
   --bulma-input-h: var(--bulma-danger-h);
@@ -9763,6 +9776,7 @@ button.tag:active,
   --bulma-input-focus-s: var(--bulma-danger-s);
   --bulma-input-focus-l: var(--bulma-danger-l);
   --bulma-input-border-l: var(--bulma-danger-l);
+  --bulma-arrow-color: var(--bulma-danger);
 }
 .select.is-css {
   --bulma-input-h: var(--bulma-css-h);
@@ -9772,6 +9786,7 @@ button.tag:active,
   --bulma-input-focus-s: var(--bulma-css-s);
   --bulma-input-focus-l: var(--bulma-css-l);
   --bulma-input-border-l: var(--bulma-css-l);
+  --bulma-arrow-color: var(--bulma-css);
 }
 .select.is-html {
   --bulma-input-h: var(--bulma-html-h);
@@ -9781,6 +9796,7 @@ button.tag:active,
   --bulma-input-focus-s: var(--bulma-html-s);
   --bulma-input-focus-l: var(--bulma-html-l);
   --bulma-input-border-l: var(--bulma-html-l);
+  --bulma-arrow-color: var(--bulma-html);
 }
 .select.is-github {
   --bulma-input-h: var(--bulma-github-h);
@@ -9790,6 +9806,7 @@ button.tag:active,
   --bulma-input-focus-s: var(--bulma-github-s);
   --bulma-input-focus-l: var(--bulma-github-l);
   --bulma-input-border-l: var(--bulma-github-l);
+  --bulma-arrow-color: var(--bulma-github);
 }
 .select.is-js {
   --bulma-input-h: var(--bulma-js-h);
@@ -9799,6 +9816,7 @@ button.tag:active,
   --bulma-input-focus-s: var(--bulma-js-s);
   --bulma-input-focus-l: var(--bulma-js-l);
   --bulma-input-border-l: var(--bulma-js-l);
+  --bulma-arrow-color: var(--bulma-js);
 }
 .select.is-patreon {
   --bulma-input-h: var(--bulma-patreon-h);
@@ -9808,6 +9826,7 @@ button.tag:active,
   --bulma-input-focus-s: var(--bulma-patreon-s);
   --bulma-input-focus-l: var(--bulma-patreon-l);
   --bulma-input-border-l: var(--bulma-patreon-l);
+  --bulma-arrow-color: var(--bulma-patreon);
 }
 .select.is-sass {
   --bulma-input-h: var(--bulma-sass-h);
@@ -9817,6 +9836,7 @@ button.tag:active,
   --bulma-input-focus-s: var(--bulma-sass-s);
   --bulma-input-focus-l: var(--bulma-sass-l);
   --bulma-input-border-l: var(--bulma-sass-l);
+  --bulma-arrow-color: var(--bulma-sass);
 }
 .select.is-facebook {
   --bulma-input-h: var(--bulma-facebook-h);
@@ -9826,6 +9846,7 @@ button.tag:active,
   --bulma-input-focus-s: var(--bulma-facebook-s);
   --bulma-input-focus-l: var(--bulma-facebook-l);
   --bulma-input-border-l: var(--bulma-facebook-l);
+  --bulma-arrow-color: var(--bulma-facebook);
 }
 .select.is-twitter {
   --bulma-input-h: var(--bulma-twitter-h);
@@ -9835,6 +9856,7 @@ button.tag:active,
   --bulma-input-focus-s: var(--bulma-twitter-s);
   --bulma-input-focus-l: var(--bulma-twitter-l);
   --bulma-input-border-l: var(--bulma-twitter-l);
+  --bulma-arrow-color: var(--bulma-twitter);
 }
 .select.is-sun {
   --bulma-input-h: var(--bulma-sun-h);
@@ -9844,6 +9866,7 @@ button.tag:active,
   --bulma-input-focus-s: var(--bulma-sun-s);
   --bulma-input-focus-l: var(--bulma-sun-l);
   --bulma-input-border-l: var(--bulma-sun-l);
+  --bulma-arrow-color: var(--bulma-sun);
 }
 .select.is-moon {
   --bulma-input-h: var(--bulma-moon-h);
@@ -9853,6 +9876,7 @@ button.tag:active,
   --bulma-input-focus-s: var(--bulma-moon-s);
   --bulma-input-focus-l: var(--bulma-moon-l);
   --bulma-input-border-l: var(--bulma-moon-l);
+  --bulma-arrow-color: var(--bulma-moon);
 }
 .select.is-small {
   border-radius: var(--bulma-radius-small);
