--- a/docs/assets/css/website.css
+++ b/docs/assets/css/website.css
@@ -7296,8 +7296,8 @@ a.box:active {
 }
 .button.is-rounded {
   border-radius: var(--bulma-radius-rounded);
-  padding-left: calc(var(--bulma-button-padding-horizontal) + 0.25em);
-  padding-right: calc(var(--bulma-button-padding-horizontal) + 0.25em);
+  padding-left: calc(var(--bulma-button-padding-horizontal) + 0.25em - var(--bulma-button-border-width));
+  padding-right: calc(var(--bulma-button-padding-horizontal) + 0.25em - var(--bulma-button-border-width));
 }
 
 .buttons {
