--- a/css/versions/bulma-no-helpers-prefixed.css
+++ b/css/versions/bulma-no-helpers-prefixed.css
@@ -1054,8 +1054,8 @@ a.bulma-box:active {
 }
 .bulma-button.bulma-is-rounded {
   border-radius: var(--bulma-radius-rounded);
-  padding-left: calc(var(--bulma-button-padding-horizontal) + 0.25em);
-  padding-right: calc(var(--bulma-button-padding-horizontal) + 0.25em);
+  padding-left: calc(var(--bulma-button-padding-horizontal) + 0.25em - var(--bulma-button-border-width));
+  padding-right: calc(var(--bulma-button-padding-horizontal) + 0.25em - var(--bulma-button-border-width));
 }
 
 .bulma-buttons {
