--- a/docs/_includes/docs/hero.html
+++ b/docs/_includes/docs/hero.html
@@ -24,7 +24,9 @@
     {% endif %}
   </div>
 
-  <div class="bd-hero-carbon">
-    {% include website/carbon.html %}
-  </div>
+  {% unless include.hide_carbon == true %}
+    <div class="bd-hero-carbon">
+      {% include website/carbon.html %}
+    </div>
+  {% endunless %}
 </section>
