Use cards for shop

--- a/docs/_includes/global/nav-item.html
+++ b/docs/_includes/global/nav-item.html
@@ -36,6 +36,9 @@
       {% else %}
         {{ link.name }}
       {% endif %}
+      {% if include.link_id == "shop" %}
+        <span class="tag is-success">New!</span>
+      {% endif %}
     </span>
   {% endunless %}
 </a>
