--- a/docs/_sass/global/nav.scss
+++ b/docs/_sass/global/nav.scss
@@ -54,7 +54,8 @@
   }
 
   &.is-system,
-  &.is-docs {
+  &.is-docs,
+  &.is-shop {
     --h: #{cv.getVar("success-h")};
     --s: #{cv.getVar("success-s")};
     --l: #{cv.getVar("success-l")};
