--- a/docs/website.scss
+++ b/docs/website.scss
@@ -231,6 +231,7 @@ $themes: (
   "customize": "info",
   "docs": "success",
   "expo": "warning",
+  "shop": "success",
   "features": "danger",
   "helpers": "link",
   "html": "html",
