--- a/docs/assets/css/website.css
+++ b/docs/assets/css/website.css
@@ -34259,7 +34259,7 @@ has-background-moon.is-hoverable:active {
   --s: var(--bulma-info-s);
   --l: var(--bulma-info-l);
 }
-.bd-nav-item.is-system, .bd-nav-item.is-docs {
+.bd-nav-item.is-system, .bd-nav-item.is-docs, .bd-nav-item.is-shop {
   --h: var(--bulma-success-h);
   --s: var(--bulma-success-s);
   --l: var(--bulma-success-l);
@@ -38849,6 +38849,13 @@ has-background-moon.is-hoverable:active {
   --theme-h: var(--bulma-warning-h);
   --theme-s: var(--bulma-warning-s);
   --theme-l: var(--bulma-warning-l);
+  --theme-color: hsl(var(--theme-h), var(--theme-s), var(--theme-l));
+}
+
+.bd-theme-shop {
+  --theme-h: var(--bulma-success-h);
+  --theme-s: var(--bulma-success-s);
+  --theme-l: var(--bulma-success-l);
   --theme-color: hsl(var(--theme-h), var(--theme-s), var(--theme-l));
 }
 
