Adjust shop styling

--- a/docs/_includes/global/nav-item.html
+++ b/docs/_includes/global/nav-item.html
@@ -37,7 +37,7 @@
         {{ link.name }}
       {% endif %}
       {% if include.link_id == "shop" %}
-        <span class="tag is-success">New!</span>
+        <span class="tag is-success ml-1">New!</span>
       {% endif %}
     </span>
   {% endunless %}
