--- a/docs/assets/css/website.css
+++ b/docs/assets/css/website.css
@@ -34259,7 +34259,7 @@ has-background-moon.is-hoverable:active {
   --s: var(--bulma-info-s);
   --l: var(--bulma-info-l);
 }
-.bd-nav-item.is-system, .bd-nav-item.is-docs, .bd-nav-item.is-shop {
+.bd-nav-item.is-system, .bd-nav-item.is-shop {
   --h: var(--bulma-success-h);
   --s: var(--bulma-success-s);
   --l: var(--bulma-success-l);
@@ -38839,9 +38839,9 @@ has-background-moon.is-hoverable:active {
 }
 
 .bd-theme-docs {
-  --theme-h: var(--bulma-success-h);
-  --theme-s: var(--bulma-success-s);
-  --theme-l: var(--bulma-success-l);
+  --theme-h: var(--bulma-primary-h);
+  --theme-s: var(--bulma-primary-s);
+  --theme-l: var(--bulma-primary-l);
   --theme-color: hsl(var(--theme-h), var(--theme-s), var(--theme-l));
 }
 
