--- a/docs/website.scss
+++ b/docs/website.scss
@@ -229,7 +229,7 @@ $themes: (
   "code": "link",
   "css": "css",
   "customize": "info",
-  "docs": "success",
+  "docs": "primary",
   "expo": "warning",
   "shop": "success",
   "features": "danger",
