Add cookie banner

--- a/docs/_sass/docs/_index.scss
+++ b/docs/_sass/docs/_index.scss
@@ -3,6 +3,7 @@
 @forward "brand";
 @forward "call";
 @forward "code";
+@forward "cupcake";
 @forward "docs";
 @forward "drawing";
 @forward "example";
