--- a/docs/assets/css/website.css
+++ b/docs/assets/css/website.css
@@ -35708,6 +35708,69 @@ has-background-moon.is-hoverable:active {
     padding-bottom: var(--snippet-spacing);
   }
 }
+.cpck-window {
+  background-color: var(--bulma-background);
+  box-shadow: 0 0 1em rgba(0, 0, 0, 0.1);
+  padding: 1em 1.5em;
+  position: fixed;
+  z-index: 60;
+}
+
+.cpck-invisible {
+  display: none !important;
+}
+
+.cpck-link {
+  border-bottom: 1px solid var(--bulma-link);
+  padding-bottom: 2px;
+}
+.cpck-link:hover {
+  border-bottom-width: 2px;
+}
+.cpck-link:active {
+  background-color: var(--bulma-link-light);
+}
+
+.cpck-compliance {
+  margin-top: 1em;
+}
+
+.cpck-btn {
+  border: 2px solid var(--bulma-success);
+  border-radius: var(--bulma-radius);
+  color: var(--bulma-success);
+  display: inline-block;
+  font-weight: var(--bulma-weight-bold);
+  padding: 0.5em 1em;
+  vertical-align: top;
+}
+.cpck-btn span {
+  margin-left: -0.125em;
+  margin-right: 0.5em;
+}
+.cpck-btn:hover {
+  background-color: var(--bulma-success-light);
+  color: var(--bulma-success-dark);
+}
+.cpck-btn:active, .cpck-btn:focus {
+  outline: none;
+}
+
+@media screen and (max-width: 768px) {
+  .cpck-window {
+    bottom: 0;
+    left: 0;
+    right: 0;
+  }
+}
+@media screen and (min-width: 769px), print {
+  .cpck-window {
+    border-radius: var(--bulma-radius);
+    bottom: 1em;
+    right: 1em;
+    width: 20rem;
+  }
+}
 .bd-docs {
   --p: 2rem;
   --scale: 1;
