--- a/css/versions/bulma-no-helpers.css
+++ b/css/versions/bulma-no-helpers.css
@@ -3437,14 +3437,14 @@ button.tag:active,
 .field.has-addons .control:first-child:not(:only-child) .button,
 .field.has-addons .control:first-child:not(:only-child) .input,
 .field.has-addons .control:first-child:not(:only-child) .select select {
-  border-bottom-right-radius: 0;
-  border-top-right-radius: 0;
+  border-start-end-radius: 0;
+  border-end-end-radius: 0;
 }
 .field.has-addons .control:last-child:not(:only-child) .button,
 .field.has-addons .control:last-child:not(:only-child) .input,
 .field.has-addons .control:last-child:not(:only-child) .select select {
-  border-bottom-left-radius: 0;
-  border-top-left-radius: 0;
+  border-start-start-radius: 0;
+  border-end-start-radius: 0;
 }
 .field.has-addons .control .button:not([disabled]):hover, .field.has-addons .control .button:not([disabled]).is-hovered,
 .field.has-addons .control .input:not([disabled]):hover,
@@ -4960,8 +4960,8 @@ a.navbar-item.is-active, a.navbar-item.is-selected,
   }
   .navbar-dropdown {
     background-color: var(--bulma-navbar-dropdown-background-color);
-    border-bottom-left-radius: var(--bulma-navbar-dropdown-radius);
-    border-bottom-right-radius: var(--bulma-navbar-dropdown-radius);
+    border-end-start-radius: var(--bulma-navbar-dropdown-radius);
+    border-end-end-radius: var(--bulma-navbar-dropdown-radius);
     border-top-color: var(--bulma-navbar-dropdown-border-color);
     border-top-style: var(--bulma-navbar-dropdown-border-style);
     border-top-width: var(--bulma-navbar-dropdown-border-width);
@@ -5447,8 +5447,8 @@ a.navbar-item.is-active, a.navbar-item.is-selected,
   color: hsl(var(--bulma-panel-h), var(--bulma-panel-s), var(--bulma-panel-color-l));
 }
 .panel-block:last-child {
-  border-bottom-left-radius: var(--bulma-panel-radius);
-  border-bottom-right-radius: var(--bulma-panel-radius);
+  border-end-start-radius: var(--bulma-panel-radius);
+  border-end-end-radius: var(--bulma-panel-radius);
 }
 
 a.panel-block,
