Add HSL sliders

--- a/docs/_react/bulma-customizer/src/components/Slider.module.css
+++ b/docs/_react/bulma-customizer/src/components/Slider.module.css
@@ -2,7 +2,6 @@
   position: relative;
   width: 15rem;
   padding: 0.375rem 0;
-  box-shadow: 0 0 0 1px green;
   cursor: grab;
 }
 
@@ -31,7 +30,7 @@
 }
 
 .background {
-  border-radius: 0.125rem;
+  border-radius: 0.25rem;
   background-color: white;
   height: 0.5rem;
 }
@@ -46,5 +45,23 @@
     rgb(0, 0, 255),
     rgb(255, 0, 255),
     rgb(255, 0, 0)
+  );
+}
+
+.saturation {
+  background-image: linear-gradient(
+    to right,
+    hsl(var(--h), 0%, var(--l)),
+    hsl(var(--h), var(--s), var(--l)),
+    hsl(var(--h), 100%, var(--l))
+  );
+}
+
+.lightness {
+  background-image: linear-gradient(
+    to right,
+    hsl(var(--h), var(--s), 0%),
+    hsl(var(--h), var(--s), 50%),
+    hsl(var(--h), var(--s), 100%)
   );
 }
