Add Color module

--- a/docs/_react/bulma-customizer/src/components/Color.module.css
+++ b/docs/_react/bulma-customizer/src/components/Color.module.css
@@ -3,7 +3,7 @@
   flex-wrap: wrap;
   gap: 1.5rem;
   border-bottom: 1px solid var(--bulma-border);
-  padding: 1.25rem;
+  padding: 1.25rem 0;
 }
 
 .side {
