Add Scheme vars

--- a/docs/_react/bulma-customizer/src/components/Slider.module.css
+++ b/docs/_react/bulma-customizer/src/components/Slider.module.css
@@ -31,7 +31,7 @@
 
 .background {
   border-radius: 0.25rem;
-  background-color: white;
+  background-color: var(--bulma-background);
   height: 0.5rem;
 }
 
