--- a/docs/_react/bulma-customizer/src/components/VarItem.module.css
+++ b/docs/_react/bulma-customizer/src/components/VarItem.module.css
@@ -3,7 +3,13 @@
   display: flex;
   gap: 1.5rem;
   border-bottom: 1px solid var(--bulma-border);
-  padding: 1.25rem 0;
+  padding: 1.25rem;
+  transition-property: background-color;
+  transition-duration: var(--bulma-duration);
+}
+
+.main:hover {
+  background-color: var(--bulma-background);
 }
 
 .side {
