Add all Elements

--- a/docs/_react/bulma-customizer/src/components/VarItem.module.css
+++ b/docs/_react/bulma-customizer/src/components/VarItem.module.css
@@ -26,7 +26,7 @@
 
 .name code {
   font-size: 1.25em;
-  font-weight: 600;
+  font-weight: 400;
   padding: 0;
   background: none;
 }
@@ -35,7 +35,7 @@
   align-items: center;
   display: flex;
   gap: 1.5rem;
-  padding: 2px 0;
+  /* padding: 2px 0; */
   width: 30rem;
   flex-shrink: 0;
 }
