Fix #3743, Fix #3799, Fix #3846

--- a/docs/_includes/docs/content/klmn.html
+++ b/docs/_includes/docs/content/klmn.html
@@ -108,4 +108,4 @@
   </div>
 </div>
 
-<script src="{{ site.url }}/lib/klmn.js"></script>
+<script src="{{ site.url }}/assets/javascript/klmn.js"></script>
