Add Control vars

--- a/docs/_react/bulma-customizer/src/components/Slider.module.css
+++ b/docs/_react/bulma-customizer/src/components/Slider.module.css
@@ -32,7 +32,7 @@
 
 .background {
   border-radius: 0.25rem;
-  background-color: var(--bulma-background);
+  background-color: var(--bulma-border);
   height: 0.5rem;
 }
 
