--- a/docs/_react/bulma-customizer/src/components/Color.module.css
+++ b/docs/_react/bulma-customizer/src/components/Color.module.css
@@ -1,9 +1,11 @@
 .main {
+  background-color: var(--bulma-body-background-color);
   display: flex;
   flex-wrap: wrap;
-  gap: 1.5rem;
-  border-bottom: 1px solid var(--bulma-border);
-  padding: 1.25rem 0;
+  gap: var(--var-item-gap);
+  box-shadow: 0 0 0 1px var(--bulma-border);
+  padding: var(--var-item-padding);
+  justify-content: center;
 }
 
 .side {
@@ -19,6 +21,7 @@
 }
 
 .name {
+  color: var(--bulma-primary);
   gap: 1rem;
   display: flex;
   align-items: center;
