--- a/docs/_react/bulma-customizer/src/components/VarItem.module.css
+++ b/docs/_react/bulma-customizer/src/components/VarItem.module.css
@@ -1,9 +1,10 @@
 .main {
+  background-color: var(--bulma-body-background-color);
   align-items: start;
   display: flex;
-  gap: 1.5rem;
-  border-bottom: 1px solid var(--bulma-border);
-  padding: 1.25rem;
+  gap: var(--var-item-gap);
+  box-shadow: 0 0 0 1px var(--bulma-border);
+  padding: var(--var-item-padding);
   transition-property: background-color;
   transition-duration: var(--bulma-duration);
 }
@@ -14,7 +15,7 @@
 
 .side {
   flex-shrink: 0;
-  width: 15rem;
+  width: var(--var-item-side-width);
 }
 
 .name {
@@ -25,6 +26,7 @@
 }
 
 .name code {
+  color: var(--bulma-primary);
   font-size: 1em;
   font-weight: 400;
   padding: 0;
@@ -36,8 +38,8 @@
   display: flex;
   gap: 1.5rem;
   /* padding: 2px 0; */
-  width: 30rem;
   flex-shrink: 0;
+  width: var(--var-item-slider-width);
 }
 
 .form {
@@ -64,4 +66,6 @@
 .description {
   flex-shrink: 1;
   flex-grow: 1;
+  margin: -0.25rem 0 0.5rem;
+  font-size: 0.875em;
 }
