--- a/docs/_sass/docs/hero.scss
+++ b/docs/_sass/docs/hero.scss
@@ -10,6 +10,7 @@
   padding: calc(var(--scale) * 3rem);
   text-align: center;
 
+  &.is-horizontal,
   &.is-docs {
     align-items: center;
     flex-direction: row;
@@ -29,6 +30,10 @@
     .bd-hero-prints {
       justify-content: flex-start;
     }
+  }
+
+  &.is-horizontal {
+    padding: calc(var(--scale) * 3rem);
   }
 }
 
