--- a/docs/assets/css/website.css
+++ b/docs/assets/css/website.css
@@ -36819,22 +36819,25 @@ has-background-moon.is-hoverable:active {
   padding: calc(var(--scale) * 3rem);
   text-align: center;
 }
-.bd-hero.is-docs {
+.bd-hero.is-horizontal, .bd-hero.is-docs {
   align-items: center;
   flex-direction: row;
   justify-content: flex-start;
   padding: 0;
   text-align: left;
 }
-.bd-hero.is-docs .bd-hero-body {
+.bd-hero.is-horizontal .bd-hero-body, .bd-hero.is-docs .bd-hero-body {
   flex-basis: 20em;
   flex-grow: 1;
 }
-.bd-hero.is-docs .bd-hr {
+.bd-hero.is-horizontal .bd-hr, .bd-hero.is-docs .bd-hr {
   margin-left: 0;
 }
-.bd-hero.is-docs .bd-hero-prints {
+.bd-hero.is-horizontal .bd-hero-prints, .bd-hero.is-docs .bd-hero-prints {
   justify-content: flex-start;
+}
+.bd-hero.is-horizontal {
+  padding: calc(var(--scale) * 3rem);
 }
 
 @media screen and (min-width: 1000px) {
