--- a/docs/_react/bulma-customizer/src/App.module.css
+++ b/docs/_react/bulma-customizer/src/App.module.css
@@ -5,17 +5,9 @@
   --var-item-gap: 1rem;
 }
 
-.items {
-  display: grid;
-  grid-template-columns: repeat(
-    auto-fit,
-    minmax(
-      calc(
-        var(--var-item-padding) + var(--var-item-side-width) +
-          var(--var-item-gap) + var(--var-item-slider-width) +
-          var(--var-item-padding)
-      ),
-      1fr
-    )
-  );
+.controls {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 0.5rem;
+  padding: 1.5rem;
 }
