--- a/docs/_react/bulma-customizer/src/App.module.css
+++ b/docs/_react/bulma-customizer/src/App.module.css
@@ -3,6 +3,16 @@
   --var-item-slider-width: 30rem;
   --var-item-padding: 1rem;
   --var-item-gap: 1rem;
+  transform-origin: bottom right;
+  transition-duration: 300ms;
+  transition-property: opacity, transform;
+  transform: scale(0.9);
+  opacity: 0;
+}
+
+.open {
+  opacity: 1;
+  transform: none;
 }
 
 .controls {
@@ -10,4 +20,10 @@
   flex-wrap: wrap;
   gap: 0.5rem;
   padding: 1.5rem;
+}
+
+.button {
+  bottom: 1rem;
+  right: 1rem;
+  position: fixed;
 }
